translation-tool/inputs/source_meta/objects/HSvc_Change_Approvers__c.object
<CustomObject>
    <description>This object will maintain all authorized changed approvers.</description>
    <fields>
        <fullName>Emergency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Approver_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ChangeApprover</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only the visible approvers will be displayed to user for selection.</description>
        <label>isVisible</label>
        <type>Checkbox</type>
    </fields>
    <label>Change Approvers</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>HSvc_Approver_Name__c</columns>
        <columns>Emergency__c</columns>
        <columns>Standard__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>